# MARE

./: .gitignore  DEVELOPER_GUIDE.md  MANIFEST.in  PUBLISHING.md  README.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.2.md  ask.py  pyproject.toml  setup.py  skills.md
.github/workflows/: publish.yml
examples/: advanced_stack.py  apple_support_eval_cases.json  developer_playground.ipynb  manual_116441_eval_cases.json  mixed_docs_workflow.py  multi_pdf_workflow.py  sample_corpus.json
examples/mixed_docs/: device-manual.md  employee-onboarding.docx  support-notes.txt
releases/: RELEASE_NOTES_0.4.3.md
src/mare/: __init__.py  api.py  ask.py  chat.py  cli.py  demo.py  engine.py  eval.py  extensions.py  fusion.py  highlight.py  ingest.py  integrations.py  mcp_server.py  objects.py  router.py  streamlit_app.py  types.py  workflow.py
src/mare/retrievers/: __init__.py  base.py  image.py  text.py
tests/: test_api.py  test_ask.py  test_chat.py  test_cli.py  test_engine.py  test_eval.py  test_extensibility.py  test_highlight.py  test_ingest.py  test_integrations.py  test_mcp_server.py  test_objects.py  test_streamlit_app.py  test_workflow.py
